--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=184
-dock_hsplit_3=-266
+dock_hsplit_2=187
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UserInterface/start_scherm.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UserInterface/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://levels/level_1.tscn", "res://Instances/speler.tscn", "res://UserInterface/start_scherm.tscn")
-current_scene="res://UserInterface/start_scherm.tscn"
+open_scenes=PackedStringArray("res://levels/level_1.tscn", "res://Instances/speler.tscn", "res://UserInterface/start_scherm.tscn", "res://UserInterface/game_over.tscn")
+current_scene="res://Instances/speler.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://Instances/speler.gd", "res://UserInterface/start_scherm.gd"]
-selected_script="res://UserInterface/start_scherm.gd"
+open_scripts=["res://UserInterface/game_over.gd", "res://Instances/speler.gd", "res://UserInterface/start_scherm.gd"]
+selected_script="res://Instances/speler.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
