--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,23 +19,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UserInterface/")
+dock_filesystem_selected_paths=PackedStringArray("res://SNAP.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UserInterface/", "res://Instances/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://levels/level_1.tscn", "res://Instances/speler.tscn", "res://UserInterface/start_scherm.tscn", "res://UserInterface/game_over.tscn")
+open_scenes=PackedStringArray("res://levels/level_1.tscn", "res://Instances/speler.tscn", "res://UserInterface/start_scherm.tscn", "res://UserInterface/game_over.tscn", "res://Instances/dangerObstakel.tscn", "res://Instances/obstakel.tscn")
 current_scene="res://Instances/speler.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://UserInterface/game_over.gd", "res://Instances/speler.gd", "res://UserInterface/start_scherm.gd"]
+open_scripts=["res://Instances/dangerObstakel.gd", "res://UserInterface/game_over.gd", "res://Instances/obstakel.gd", "res://Instances/speler.gd", "res://UserInterface/start_scherm.gd"]
 selected_script="res://Instances/speler.gd"
 open_help=[]
 script_split_offset=70
