--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,5 +1,11 @@
 list=Array[Dictionary]([{
 "base": &"Area2D",
+"class": &"Danger",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Instances/dangerObstakel.gd"
+}, {
+"base": &"Area2D",
 "class": &"Obstakel",
 "icon": "",
 "language": &"GDScript",
